Add permission graph api
